--- a/profile_1.html
+++ b/profile_1.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>profile</title>
+  <link rel="stylesheet" href="profile.css">
 </head>
 
 <body>
+  <main>
+    <div class="parent">
+      <div id="circle-img"></div>
+
+      <div class="parent2">
+        <div class="info">
+          <div id="tag">태그: <b>이름</b></div>
+          <div id="advantage">장점: <u>긍정적</u></div>
+          <div id="word">" 한마디 "</div>
+        </div>
+
+        <div class="link-img">
+          <a href="https://velog.io/@love1ace" target="_blank">
+            <div id="velog-img"></div>
+          </a>
+          <a href="https://velog.io/@love1ace" target="_blank">
+            <div id="github-img"></div>
+          </a>
+        </div>
+      </div>
+    </div>
+  </main>
 
 </body>
 
