응원의 한마디 추가삭제

--- a/comment/comment.html
+++ b/comment/comment.html
@@ -2,26 +2,28 @@
 <html lang="ko">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>comment</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>comment</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="./comment.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script defer src="./comment.js"></script>
 </head>
 
 <body>
-    <div class="title">
-        <h2>일리있조에게 한마디</h2>
-    </div>
+  <div class="title">
+    <h2>일리있조에게 한마디!</h2>
+  </div>
 
-    <div class="myment">
-        <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="일리있조 팀에게 할 한 마디를 작성해주세요."
-                aria-label="Recipient's usernam" aria-describedby="button-addon2">
-            <button onclick="hey()" class="btn btn-outline-info" type="button" id="button-addon2">작성</button>
-        </div>
+  <div class="myment">
+    <div class="input-group mb-3">
+      <input type="text" class="form-control" placeholder="일리있조 팀에게 할 한 마디를 작성해주세요." aria-label="Recipient's usernam"
+        aria-describedby="button-addon2">
+      <button onclick="hey()" class="btn btn-outline-info" type="button" id="button-addon2">작성</button>
     </div>
+  </div>
 </body>
 
 </html>
