--- a/profile/profile.html
+++ b/profile/profile.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>profile</title>
+    <link rel="stylesheet" href="../global.css" />
     <link rel="stylesheet" href="profile.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script defer src="./profile.js"></script>
