--- a/index.html
+++ b/index.html
@@ -2,14 +2,39 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../global.css" />
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">       
+    <title>일리있조</title>
 </head>
 
 <body>
-
+    <div id="total">
+        <div class="container">
+                <img class="memProfImg" id="memBtn" src="./img/members/yoongunhee92.jpg" alt="윤건희님">
+                <img class="memProfImg" id="memBtn" src="./img/members/Untitled.jpg" alt="김지환님">
+        </div>
+        <div class="container" id="text">
+            <div class="content"></div>
+            <p class="title">일리있조</p>
+            <div class="content"></div>
+            <p class="intro">우리 팀만의 특징</p>
+            <div class="content"></div>
+            <p class="intro">목표</p>
+            <div class="content"></div>
+            <p class="intro">약속</p>
+            <div class="content">
+                <p class="comment">한마디 하러가기</p>
+                <a class="btn btn-primary" href="./comment/comment.html" role="button"><img id=commitPointer src="./img/pointer.png"></a>
+            </div>
+        </div>
+        <div class="container">
+                <img class="memProfImg" id="memBtn" src="./img/members/2hanbyeol1.jpg" alt="이한별님">
+                <img class="memProfImg" id="memBtn" src="./img/members/parksw.jpg" alt="박성욱님">
+        </div>
+    </div>
 </body>
 
 </html>
