style: profile css 수정

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -11,10 +11,16 @@
   </head>
 
   <body>
+    <header>
+      <a href="../index.html">🧑 다른 팀원 보러가기</a>
+      <div>일리있조</div>
+      <a href="../index.html">💬 팀에게 한마디 하러가기</a>
+    </header>
     <main>
       <div class="parent">
-        <img id="circle-img" />
-
+        <div id="circle-img">
+          <img id="img"/>
+        </div>
         <div class="parent2">
           <div class="info">
             <div id="tag-name">
