fix: 지환님 이미지주소 수정

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="total">
         <div class="container">
                 <img class="memProfImg" id="memBtn" src="./img/members/yoongunhee92.jpg" alt="윤건희님">
-                <img class="memProfImg" id="memBtn" src="./img/members/Untitled.jpg" alt="김지환님">
+                <img class="memProfImg" id="memBtn" src="./img/members/RingKim1.jpg" alt="김지환님">
         </div>
         <div class="container" id="text">
             <div class="content"></div>
