feat: page 간 연결

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="global.css" />
     <link rel="stylesheet" href="main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">       
@@ -13,8 +14,12 @@
 <body>
     <div id="total">
         <div class="container">
+            <a href="profile/profile.html?name=윤건희">
                 <img class="memProfImg" id="memBtn" src="./img/members/yoongunhee92.jpg" alt="윤건희님">
+            </a>
+            <a href="profile/profile.html?name=김지환">
                 <img class="memProfImg" id="memBtn" src="./img/members/RingKim1.jpg" alt="김지환님">
+            </a>
         </div>
         <div class="container" id="text">
             <div class="content"></div>
@@ -45,8 +50,12 @@
             </div>
         </div>
         <div class="container">
+            <a href="profile/profile.html?name=이한별">
                 <img class="memProfImg" id="memBtn" src="./img/members/2hanbyeol1.jpg" alt="이한별님">
-                <img class="memProfImg" id="memBtn" src="./img/members/parksw.jpg" alt="박성욱님">
+            </a>
+            <a href="profile/profile.html?name=박성욱">
+                <img class="memProfImg" id="memBtn" src="./img/members/SecretCandy.jpg" alt="박성욱님">
+            </a>
         </div>
     </div>
 </body>
