style: profile css 수정 2

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -14,7 +14,7 @@
     <header>
       <a href="../index.html">🧑 다른 팀원 보러가기</a>
       <div>일리있조</div>
-      <a href="../comment/comment.html">💬 팀에게 한마디 하러가기</a>
+      <a href="../comment/comment.html">팀에게 한마디 하러가기 💬</a>
     </header>
     <main>
       <div class="parent">
