--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <div id="total">
         <div class="container">
             <a href="profile/profile.html?name=윤건희">
-                <img class="memProfImg" id="memBtn" src="./img/members/yoongunhee92.jpg" alt="윤건희님">
+                <img class="memProfImg memBtn" src="./img/members/yoongunhee92.jpg" alt="윤건희님">
             </a>
             <a href="profile/profile.html?name=김지환">
-                <img class="memProfImg" id="memBtn" src="./img/members/RingKim1.jpg" alt="김지환님">
+                <img class="memProfImg memBtn" src="./img/members/RingKim1.jpg" alt="김지환님">
             </a>
         </div>
         <div class="container" id="text">
@@ -51,10 +51,10 @@
         </div>
         <div class="container">
             <a href="profile/profile.html?name=이한별">
-                <img class="memProfImg" id="memBtn" src="./img/members/2hanbyeol1.jpg" alt="이한별님">
+                <img class="memProfImg memBtn" src="./img/members/2hanbyeol1.jpg" alt="이한별님">
             </a>
             <a href="profile/profile.html?name=박성욱">
-                <img class="memProfImg" id="memBtn" src="./img/members/SecretCandy.jpg" alt="박성욱님">
+                <img class="memProfImg memBtn" src="./img/members/SecretCandy.jpg" alt="박성욱님">
             </a>
         </div>
     </div>
