--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                     <li>서로의 의견을 수용할 수 있도록 하기</li>
                 </ul>
             </p>
-            <div class="content">
+            <div class="content commentArea">
                 <p class="comment">한마디 하러가기</p>
-                <a class="btn btn-primary" href="./comment/comment.html" role="button">이동</a>
+                <a id="commitBtn" class="btn btn-primary" href="./comment/comment.html" role="button">이동</a>
             </div>
         </div>
         <div class="container">
