style: index 페이지 css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="global.css" />
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">       
     <title>일리있조</title>
@@ -22,31 +22,28 @@
             </a>
         </div>
         <div class="container" id="text">
-            <div class="content"></div>
-            <p class="title">일리있조</p>
-            <div class="content"></div>
-            <p class="intro">우리 팀만의 특징</p>
-            <p class="introCommnet">저희 팀은 모두 화이팅이 넘치며 열심히 하려는 의지가 강해요!</p>
-            <div class="content"></div>
-            <p class="intro">목표</p>
-            <p class="introCommnet">
-                <ul class="coLi">
+            <h1 class="title">일리있조</h1>
+            <div class="content">
+                <p class="intro">😎 우리 팀만의 특징</p>
+                <p class="introComment">저희 팀은 모두 화이팅이 넘치며 열심히 하려는 의지가 강해요!</p>
+            </div>
+            <div class="content">
+                <p class="intro">⛳ 목표</p>
+                <ul class="introComment">
                     <li>도중에 포기하지 않고 끝까지 수료하기</li>
                     <li>협업과 의사소통 능력 강화하기</li>
                 </ul>
-            </p>
-            <div class="content"></div>
-            <p class="intro">약속</p>
-            <p class="introCommnet">
-                <ul class="coLi">
+            </div>
+            <div class="content">
+                <p class="intro">🤙 약속</p>
+                <ul class="introComment">
                     <li>매일 아침 9시 전까지 꼭 출석하기</li>
                     <li>주기적으로 친목을 다지고 현재 현황 공유하기</li>
                     <li>서로의 의견을 수용할 수 있도록 하기</li>
                 </ul>
-            </p>
-            <div class="content commentArea">
-                <p class="comment">한마디 하러가기</p>
-                <a id="commitBtn" class="btn btn-primary" href="./comment/comment.html" role="button">이동</a>
+            </div>
+            <div class="commentArea">
+                <a id="commitBtn" class="btn btn-primary" href="./comment/comment.html" role="button">한마디 하러 가기</a>
             </div>
         </div>
         <div class="container">
