--- a/index.html
+++ b/index.html
@@ -2,59 +2,59 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="global.css" />
-    <link rel="stylesheet" href="index.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">       
-    <title>일리있조</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="global.css" />
+  <link rel="stylesheet" href="index.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <title>일리있조</title>
 </head>
 
 <body>
-    <div id="total">
-        <div class="container">
-            <a href="profile/profile.html?name=윤건희">
-                <img class="memProfImg memBtn" src="./img/members/yoongunhee92.jpg" alt="윤건희님">
-            </a>
-            <a href="profile/profile.html?name=김지환">
-                <img class="memProfImg memBtn" src="./img/members/RingKim1.jpg" alt="김지환님">
-            </a>
-        </div>
-        <div class="container" id="text">
-            <h1 class="title">일리있조</h1>
-            <div class="content">
-                <p class="intro">😎 우리 팀만의 특징</p>
-                <p class="introComment">저희 팀은 모두 화이팅이 넘치며 열심히 하려는 의지가 강해요!</p>
-            </div>
-            <div class="content">
-                <p class="intro">⛳ 목표</p>
-                <ul class="introComment">
-                    <li>도중에 포기하지 않고 끝까지 수료하기</li>
-                    <li>협업과 의사소통 능력 강화하기</li>
-                </ul>
-            </div>
-            <div class="content">
-                <p class="intro">🤙 약속</p>
-                <ul class="introComment">
-                    <li>매일 아침 9시 전까지 꼭 출석하기</li>
-                    <li>주기적으로 친목을 다지고 현재 현황 공유하기</li>
-                    <li>서로의 의견을 수용할 수 있도록 하기</li>
-                </ul>
-            </div>
-            <div class="commentArea">
-                <a id="commitBtn" class="btn btn-primary" href="./comment/comment.html" role="button">한마디 하러 가기</a>
-            </div>
-        </div>
-        <div class="container">
-            <a href="profile/profile.html?name=이한별">
-                <img class="memProfImg memBtn" src="./img/members/2hanbyeol1.jpg" alt="이한별님">
-            </a>
-            <a href="profile/profile.html?name=박성욱">
-                <img class="memProfImg memBtn" src="./img/members/SecretCandy.jpg" alt="박성욱님">
-            </a>
-        </div>
+  <div id="total">
+    <div class="container">
+      <a href="profile/profile.html?name=윤건희">
+        <img class="memProfImg memBtn" src="./img/members/yoongunhee92.jpg" alt="윤건희님">
+      </a>
+      <a href="profile/profile.html?name=김지환">
+        <img class="memProfImg memBtn" src="./img/members/RingKim1.jpg" alt="김지환님">
+      </a>
     </div>
+    <div class="container" id="text">
+      <h1 class="title">일리있조</h1>
+      <div class="content">
+        <p class="intro">😎 우리 팀만의 특징</p>
+        <p class="introComment">저희 팀은 모두 화이팅이 넘치며 열심히 하려는 의지가 강해요!</p>
+      </div>
+      <div class="content">
+        <p class="intro">⛳ 목표</p>
+        <ul class="introComment">
+          <li>도중에 포기하지 않고 끝까지 수료하기</li>
+          <li>협업과 의사소통 능력 강화하기</li>
+        </ul>
+      </div>
+      <div class="content">
+        <p class="intro">🤙 약속</p>
+        <ul class="introComment">
+          <li>매일 아침 9시 전까지 꼭 출석하기</li>
+          <li>주기적으로 친목을 다지고 현재 현황 공유하기</li>
+          <li>서로의 의견을 수용할 수 있도록 하기</li>
+        </ul>
+      </div>
+      <div class="commentArea">
+        <a id="commitBtn" class="btn btn-primary" href="./comment.html" role="button">한마디 하러 가기</a>
+      </div>
+    </div>
+    <div class="container">
+      <a href="profile/profile.html?name=이한별">
+        <img class="memProfImg memBtn" src="./img/members/2hanbyeol1.jpg" alt="이한별님">
+      </a>
+      <a href="profile/profile.html?name=박성욱">
+        <img class="memProfImg memBtn" src="./img/members/SecretCandy.jpg" alt="박성욱님">
+      </a>
+    </div>
+  </div>
 </body>
 
 </html>
