🩹 profile.html 경로수정

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
   <div id="total">
     <div class="container">
-      <a href="profile/profile.html?name=윤건희">
+      <a href="./profile/profile.html?name=윤건희">
         <img class="memProfImg memBtn" src="./img/members/yoongunhee92.jpg" alt="윤건희님">
       </a>
-      <a href="profile/profile.html?name=김지환">
+      <a href="./profile/profile.html?name=김지환">
         <img class="memProfImg memBtn" src="./img/members/RingKim1.jpg" alt="김지환님">
       </a>
     </div>
@@ -47,10 +47,10 @@
       </div>
     </div>
     <div class="container">
-      <a href="profile/profile.html?name=이한별">
+      <a href="./profile/profile.html?name=이한별">
         <img class="memProfImg memBtn" src="./img/members/2hanbyeol1.jpg" alt="이한별님">
       </a>
-      <a href="profile/profile.html?name=박성욱">
+      <a href="./profile/profile.html?name=박성욱">
         <img class="memProfImg memBtn" src="./img/members/SecretCandy.jpg" alt="박성욱님">
       </a>
     </div>
