--- a/profile/profile.html
+++ b/profile/profile.html
@@ -1,48 +1,47 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>profile</title>
-    <link rel="stylesheet" href="../global.css" />
-    <link rel="stylesheet" href="profile.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script defer src="./profile.js"></script>
-  </head>
 
-  <body>
-    <header>
-      <a href="../index.html">🧑 다른 팀원 보러가기</a>
-      <div>일리있조</div>
-      <a href="../comment/comment.html">팀에게 한마디 하러가기 💬</a>
-    </header>
-    <main>
-      <div class="parent">
-        <div id="circle-img">
-          <img id="img"/>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>profile</title>
+  <link rel="stylesheet" href="../global.css" />
+  <link rel="stylesheet" href="profile.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script defer src="./profile.js"></script>
+</head>
+
+<body>
+  <header>
+    <a href="../index.html">🧑 다른 팀원 보러가기</a>
+    <div>일리있조</div>
+    <a href="../comment.html">팀에게 한마디 하러가기 💬</a>
+  </header>
+  <main>
+    <div class="parent">
+      <div id="circle-img">
+        <img id="img" />
+      </div>
+      <div class="parent2">
+        <div class="info">
+          <div id="tag-name">
+            <span id="tag">태그</span> <b id="name">이름</b> (<span id="mbti"></span>)
+          </div>
+          <div id="strength">긍정적</div>
+          <div id="word">" 한마디 "</div>
         </div>
-        <div class="parent2">
-          <div class="info">
-            <div id="tag-name">
-              <span id="tag">태그</span> <b id="name">이름</b> (<span
-                id="mbti"
-              ></span
-              >)
-            </div>
-            <div id="strength">긍정적</div>
-            <div id="word">" 한마디 "</div>
-          </div>
 
-          <div class="link-img">
-            <a id="velog" href="https://velog.io/@love1ace" target="_blank">
-              <div id="velog-img"></div>
-            </a>
-            <a id="github" href="https://velog.io/@love1ace" target="_blank">
-              <div id="github-img"></div>
-            </a>
-          </div>
+        <div class="link-img">
+          <a id="velog" href="https://velog.io/@love1ace" target="_blank">
+            <div id="velog-img"></div>
+          </a>
+          <a id="github" href="https://velog.io/@love1ace" target="_blank">
+            <div id="github-img"></div>
+          </a>
         </div>
       </div>
-    </main>
-  </body>
+    </div>
+  </main>
+</body>
+
 </html>
