--- a/comment.html
+++ b/comment.html
@@ -11,19 +11,52 @@
   <link rel="stylesheet" href="./global.css" />
 
   <style>
+    h2 {
+      text-align: center;
+    }
+
     .myTitle {
       width: 300px;
-      margin: 100px auto 0px auto;
+      margin: 130px auto 0px auto;
     }
 
     .myCards {
-      width: 1200px;
+      width: 750px;
       margin: 30px auto 0px auto;
     }
 
+    #card {
+      overflow-y: auto;
+      height: 500px;
+    }
+
+    .card-body {
+      padding: 0.5rem;
+    }
+
+    .card-text {
+      margin-left: 1rem;
+    }
+
+    .del-btn img {
+      width: 20px;
+    }
+
     .myment {
-      width: 800px;
-      margin: 50px auto 50px auto;
+      width: 650px;
+      margin: 50px auto;
+    }
+
+    @media screen and (max-width: 900px) {
+
+      .myment {
+        width: 85%;
+        margin: 50px auto;
+      }
+
+      .myCards {
+        width: 90%;
+      }
     }
   </style>
   <script type="module">
@@ -56,7 +89,7 @@
       window.location.reload(); // 페이지를 새로고침하여 변경사항 반영
     }
 
-    window.deletePost = deletePost
+    window.deletePost = deletePost;
 
     $("#cheeringBtn").click(async function () {
       let content = $('#content').val().trim();
@@ -74,7 +107,6 @@
     docs.forEach((doc) => {
 
       let row = doc.data();
-
       let content = row['content'];
 
       let temp_html = `
@@ -82,7 +114,9 @@
         <div class="card h-100 d-flex align-items-center">
           <div class="card-body d-flex justify-content-between align-items-center" style="width: 100%;">
             <p class="card-text">${content}</p>
-            <button class="btn btn-danger" onclick="deletePost('${doc.id}')">삭제</button>
+            <button class="btn btn-danger del-btn" onclick="deletePost('${doc.id}')">
+              <img src='./img/trash-can.png' />
+            </button>
           </div>
         </div>
       </div>`;
@@ -92,15 +126,18 @@
 </head>
 
 <body>
+  <header>
+    <a href="./index.html">🧑 팀 소개로 돌아가기</a>
+  </header>
   <div class="myTitle">
-    <h2>일리있조에게 한마디</h2>
+    <h2>일리있조에게 한마디 💙</h2>
   </div>
   <div class="myPostingBox" id="postingBox">
     <div class="myment">
       <div class="input-group mb-3">
         <input type="text" class="form-control" id="content" placeholder="일리있조 팀에게 할 한 마디를 작성해주세요."
           aria-label="Recipient's usernam" aria-describedby="button-addon2">
-        <button id="cheeringBtn" onclick="hey()" class="btn btn-info" type="button"
+        <button id="cheeringBtn" class="btn btn-info" type="button"
           id="button-addon2">작성</button>
       </div>
     </div>
