--- a/comment.html
+++ b/comment.html
@@ -20,14 +20,19 @@
       margin: 130px auto 0px auto;
     }
 
+    #cheeringBtn {
+      border: 1px solid #ced4da
+    }
+
     .myCards {
       width: 750px;
       margin: 30px auto 0px auto;
     }
 
     #card {
-      overflow-y: auto;
+      overflow-y: scroll;
       height: 500px;
+      padding-right: 20px;
     }
 
     .card-body {
@@ -42,13 +47,16 @@
       width: 20px;
     }
 
+    .del-btn:hover img {
+      filter: brightness(0) invert(1);
+    }
+
     .myment {
       width: 650px;
       margin: 50px auto;
     }
 
     @media screen and (max-width: 900px) {
-
       .myment {
         width: 85%;
         margin: 50px auto;
@@ -114,7 +122,7 @@
         <div class="card h-100 d-flex align-items-center">
           <div class="card-body d-flex justify-content-between align-items-center" style="width: 100%;">
             <p class="card-text">${content}</p>
-            <button class="btn btn-danger del-btn" onclick="deletePost('${doc.id}')">
+            <button class="btn btn-outline-danger del-btn" onclick="deletePost('${doc.id}')">
               <img src='./img/trash-can.png' />
             </button>
           </div>
@@ -136,9 +144,9 @@
     <div class="myment">
       <div class="input-group mb-3">
         <input type="text" class="form-control" id="content" placeholder="일리있조 팀에게 할 한 마디를 작성해주세요."
-          aria-label="Recipient's usernam" aria-describedby="button-addon2">
-        <button id="cheeringBtn" class="btn btn-info" type="button"
-          id="button-addon2">작성</button>
+          aria-label="comment-to-team" aria-describedby="cheeringBtn">
+        <button id="cheeringBtn" class="btn btn-light" type="button">작성
+        </button>
       </div>
     </div>
   </div>
