--- a/comment.html
+++ b/comment.html
@@ -78,13 +78,13 @@
     // Firebase 구성 정보 설정
     // For Firebase JS SDK v7.20.0 and later, measurementId is optional
     const firebaseConfig = {
-      apiKey: "AIzaSyCcGj6G8DOAJ6izXcwHcYBLvpre_t4hPyw",
-      authDomain: "introduceteam.firebaseapp.com",
-      projectId: "introduceteam",
-      storageBucket: "introduceteam.appspot.com",
-      messagingSenderId: "884294230530",
-      appId: "1:884294230530:web:79787b39ea2fdd93b73d1b",
-      measurementId: "G-Z6YGKBQRJB"
+      apiKey: "AIzaSyBvAm4LCvQ8EPYmf_2fU-Dib2mWSpDIhD4",
+      authDomain: "sparta-teampage-f573e.firebaseapp.com",
+      projectId: "sparta-teampage-f573e",
+      storageBucket: "sparta-teampage-f573e.appspot.com",
+      messagingSenderId: "692004586629",
+      appId: "1:692004586629:web:ea6f91b026924c5f7295ec",
+      measurementId: "G-JRLEWF7NQN"
     };
 
     // Firebase 인스턴스 초기화
