--- a/profile/profile.html
+++ b/profile/profile.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>profile</title>
+  <title>일리있조 : 프로필</title>
   <link rel="stylesheet" href="../global.css" />
   <link rel="stylesheet" href="profile.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
